@@ -39,6 +39,12 @@ module Sequel
       # Exception classes used by Impala.
       RbhiveExceptions = [
         RBHive::TCLIConnectionError,
+        ::Thrift::TransportException,
+        IOError
+      ].freeze
+
+      DisconnectExceptions = [
+        ::Thrift::TransportException,
         IOError
       ].freeze
 
@@ -62,8 +68,7 @@ module Sequel
       def disconnect_connection(connection)
         connection.close_session if connection.session
         connection.close
-      rescue IOError => e
-        # noop
+      rescue *DisconnectExceptions
       end
 
       def execute(sql, opts=OPTS)
@@ -93,7 +98,12 @@ module Sequel
       # in most cases that results in an unusable connection, so treat it as a
       # disconnect error so Sequel will reconnect.
       def disconnect_error?(exception, opts)
-        exception.is_a?(IOError) || super
+        case exception
+        when *DisconnectExceptions
+          true
+        else
+          super
+        end
       end
 
       # Use DESCRIBE to get the column names and types for the table.
